Bug 391087 - Opening a url via the service (cmd-shift-u) sometimes opens blank window (fix the whitespace trimming methods to not skip spaces). Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=hendy, sr=pink